--- a/_config.yml
+++ b/_config.yml
@@ -11,8 +11,8 @@ title                    : "Personal Website"
 title_separator          : "-"
 name                     : &name "Atharv Ramesh"
 description              : &description "Associate AI Engineer at Netradyne"
-url                      : https://atharvrn.github.io/AtharvRamesh.github.io/ # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
-baseurl                  : "" # the subpath of your site, e.g. "/blog"
+url                      : https://atharvrn.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+baseurl                  : "/AtharvRamesh.github.io" # the subpath of your site when publishing as a project page
 repository               : "atharvrn.github.io/AtharvRamesh.github.io/"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
