--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -10,8 +10,9 @@ main:
     
   - title: "Projects"
     url: /portfolio/    
+
+  - title: "Blog"
+    url: /blog/
     
   - title: "CV"
     url: /cv/
-    
-
