--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,14 +5,5 @@
 # prevent it from being included in the site.
 
 main:
-  - title: "Publications"
-    url: /publications/  
-    
-  - title: "Projects"
-    url: /portfolio/    
-
-  - title: "Blog"
-    url: /blog/
-    
-  - title: "CV"
-    url: /cv/
+  - title: "Resume"
+    url: /resume/
